--- a/.az/azure-pipeline.yaml
+++ b/.az/azure-pipeline.yaml
@@ -54,33 +54,33 @@ stages:
 #        pm2 restart app
       displayName: 'npm install and pm2 restart'
 
-- stage: prod_backend
-  condition: eq(variables['build.sourceBranch'], 'refs/heads/master')
-  pool:
-    name: prod
-    demands:
-    - Agent.Name -equals centos
-  jobs:
-  - job: prod_deploy
-    steps:
-
-    - checkout: self
-
-    - task: DownloadSecureFile@1
-      name: env
-      displayName: 'Download env file'
-      inputs:
-        secureFile: 'env.prod.env'
-    - task: CopyFiles@2
-      inputs:
-        #sourceFolder: $(Agent.TempDirectory)
-        contents: $(mySecureFile.secureFilePath) 
-        targetFolder: $(Build.SourcesDirectory)
-    - script: |
-        dir $(Build.SourcesDirectory)
-        cd $(Build.SourcesDirectory)
-        cp $(mySecureFile.secureFilePath) .
-        ls -al
+#- stage: prod_backend
+#  condition: eq(variables['build.sourceBranch'], 'refs/heads/master')
+#  pool:
+#    name: prod
+#    demands:
+#    - Agent.Name -equals centos
+#  jobs:
+#  - job: prod_deploy
+#    steps:
+#
+#    - checkout: self
+#
+#    - task: DownloadSecureFile@1
+#      name: env
+#      displayName: 'Download env file'
+#      inputs:
+#        secureFile: 'env.prod.env'
+#    - task: CopyFiles@2
+#      inputs:
+#        #sourceFolder: $(Agent.TempDirectory)
+#        contents: $(mySecureFile.secureFilePath) 
+#        targetFolder: $(Build.SourcesDirectory)
+#    - script: |
+#        dir $(Build.SourcesDirectory)
+#        cd $(Build.SourcesDirectory)
+#        cp $(mySecureFile.secureFilePath) .
+#        ls -al
 #        npm install
 #        pm2 restart good-action-api
-      displayName: 'npm install and pm2 restart'
+#      displayName: 'npm install and pm2 restart'
