Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,9 @@ trigger:
 - azure-pipeline
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: dev
+  demands:
+  - Agent.Name -equals centos
 
 steps:
 - task: NodeTool@0
