--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,8 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- azure-pipeline
+- dev
+- master
 
 pool:
   name: dev
