--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,22 +28,33 @@ steps:
   displayName: 'Download env file'
   inputs:
     secureFile: 'env.dev.env'
+
 - task: CopyFiles@2
   inputs:
     sourceFolder: $(Agent.TempDirectory)
     contents: '*.env'
     targetFolder: $(Build.SourcesDirectory)
+
+- script: |
+    echo $sourceVersion
+    commitHash=${sourceVersion:0:7}
+    echo $commitHash
+    echo "##vso[task.setvariable variable=commitHash]$commitHash" ## Set variable for using in other tasks.
+  env: { sourceVersion: $(Build.SourceVersion) }
+  displayName: Git Hash 7-digit
+  
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)'
-    includeRootFolder: true
+    includeRootFolder: false
     archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId)-$(build.sourceBranch).zip'
+    archiveFile: '$(Build.BuildId)-$(build.sourceBranchName)-$(commitHash).zip'
     replaceExistingArchive: true
   displayName: 'Archive'
+  
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
+    PathtoPublish: '$(Build.Repository.Name)'
+    ArtifactName: '$(build.sourceBranchName)'
     publishLocation: 'Container'
   displayName: 'Publish Artifacts'
