--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,55 +6,78 @@
 trigger:
 - dev
 - master
-
-pool:
-  name: dev
-  demands:
-  - Agent.Name -equals centos
-
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '17.x'
-  displayName: 'Install Node.js'
-
-- script: |
-    npm install
-  displayName: 'build'
-
-- task: DownloadSecureFile@1
-  condition: eq(variables['build.sourceBranch'], 'refs/heads/dev')
-  name: env
-  displayName: 'Download env file'
-  inputs:
-    secureFile: 'env.dev.env'
-
-- task: CopyFiles@2
-  inputs:
-    sourceFolder: $(Agent.TempDirectory)
-    contents: '*.env'
-    targetFolder: $(Build.SourcesDirectory)
-
-- script: |
-    echo $sourceVersion
-    commitHash=${sourceVersion:0:7}
-    echo $commitHash
-    echo "##vso[task.setvariable variable=commitHash]$commitHash" ## Set variable for using in other tasks.
-  env: { sourceVersion: $(Build.SourceVersion) }
-  displayName: Git Hash 7-digit
   
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.SourcesDirectory)'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId)-$(build.sourceBranchName)-$(commitHash).zip'
-    replaceExistingArchive: true
-  displayName: 'Archive'
+variables:
+  AppNamePrefix: 'backend'
   
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: '$(build.sourceBranchName)'
-    publishLocation: 'Container'
-  displayName: 'Publish Artifacts'
+stages:
+- stage: Build 
+  jobs:
+  - job: Build 
+    pool:
+      name: dev
+      demands:
+      - Agent.Name -equals centos
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '17.x'
+      displayName: 'Install Node.js'
+    
+    - script: |
+        npm install
+      displayName: 'build'
+    
+    - task: DownloadSecureFile@1
+      condition: eq(variables['build.sourceBranch'], 'refs/heads/dev')
+      name: env_dev
+      displayName: 'Download env file'
+      inputs:
+        secureFile: 'env.dev.env'
+
+    - task: DownloadSecureFile@1
+      condition: eq(variables['build.sourceBranch'], 'refs/heads/master')
+      name: env_prod
+      displayName: 'Download env file'
+      inputs:
+        secureFile: 'env.prod.env'
+  
+    - task: CopyFiles@2
+      displayName: 'Copy env file'
+      inputs:
+        sourceFolder: $(Agent.TempDirectory)
+        contents: '*.env'
+        targetFolder: $(Build.SourcesDirectory)
+    
+    - script: |
+        echo $sourceVersion
+        commitHash=${sourceVersion:0:7}
+        echo $commitHash
+        echo "##vso[task.setvariable variable=commitHash]$commitHash" ## Set variable for using in other tasks.
+      env: { sourceVersion: $(Build.SourceVersion) }
+      displayName: Get Git Hash 7-digit
+  
+    - task: ArchiveFiles@2
+      inputs:
+        rootFolderOrFile: '$(Build.SourcesDirectory)'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.BuildId)-$(build.sourceBranchName)-$(commitHash).zip'
+        replaceExistingArchive: true
+      displayName: 'Archive build Artifacts'      
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: '$(build.sourceBranchName)'
+        publishLocation: 'Container'
+      displayName: 'Publish Artifacts'
+
+- stage: Deploy
+  jobs: 
+  - job: Deploy_to_dev
+    condition: eq(variables['build.sourceBranch'], 'refs/heads/dev')
+    pool: 
+     name: dev
+     demands:
+     - Agent.Name -equals centos
+
