updated pipeline dev

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ stages:
         rootFolderOrFile: '$(Build.SourcesDirectory)'
         includeRootFolder: false
         archiveType: 'zip'
-        archiveFile: '$(Build.BuildId)-$(build.sourceBranchName)-$(commitHash).zip'
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)-$(build.sourceBranchName)-$(commitHash).zip'
         replaceExistingArchive: true
       displayName: 'Archive build Artifacts'      
     - task: PublishBuildArtifacts@1
