Nodeapp: Updated with API, changed workflow steps

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "joi": "^13.1.0",
+    "nodemon": "^2.0.15",
     "pug": "^3.0.2"
   },
   "devDependencies": {
