--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,22 +22,22 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+  
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
     - run: env
+  
   docker:
     runs-on: ubuntu-latest
+    needs: [build, deploy]
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Docker meta
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
         with:
@@ -50,17 +50,14 @@ jobs:
             org.opencontainers.image.title=NodeApp
             org.opencontainers.image.description=Hello World Nodejs
             org.opencontainers.image.vendor=360ace
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
