--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "hoek": "^6.1.3",
     "joi": "^13.1.0",
     "nodemon": "^2.0.15",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "topo": "^3.0.3"
   },
   "devDependencies": {
     "index": "^0.4.0",
