--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/hoek": "^10.0.0",
+    "@hapi/topo": "^6.0.0",
     "express": "^4.17.2",
-    "hoek": "^6.1.3",
-    "joi": "^13.1.0",
+    "joi": "^17.6.0",
     "nodemon": "^2.0.15",
-    "pug": "^3.0.2",
-    "topo": "^3.0.3"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "index": "^0.4.0",
