--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,10 @@ jobs:
             org.opencontainers.image.description=Hello World Nodejs
             org.opencontainers.image.vendor=360ace
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=ref,event=tag
             type=sha
           flavor: |
-            latest=auto
+            latest=true
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
