--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,10 +5,6 @@
 
 trigger:
 - dev
-- master
-  
-variables:
-  AppNamePrefix: 'backend'
   
 stages:
 - stage: Build 
@@ -78,3 +74,63 @@ stages:
         publishLocation: 'Container'
       displayName: 'Publish Artifacts'
 
+- stage: image_build
+  dependsOn: [build]
+  jobs:
+    - job: image_build_scan 
+      pool:
+        name: dev
+        demands:
+        - Agent.Name -equals centos
+      steps:
+      - script: |
+          echo $sourceVersion
+          commitHash=${sourceVersion:0:7}
+          echo $commitHash
+          echo "##vso[task.setvariable variable=commitHash]$commitHash" ## Set variable for using in other tasks.
+        env: { sourceVersion: $(Build.SourceVersion) }
+        displayName: Get Git Hash 7-digit
+
+      - task: Docker@2
+        displayName: Build an image
+        inputs:
+          command: "build"
+          Dockerfile: "Dockerfile"
+          tags: |
+            latest
+            $(commitHash)
+          arguments: "-t nodeapp:$(tag)"
+
+      - task: CmdLine@2
+        displayName: Scan for reports
+        inputs:
+          script: |
+            docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $HOME/Library/Caches:/root/.cache/ \
+            -v "$(pwd):/src" \
+            aquasec/trivy \
+            --exit-code 0 \
+            --severity LOW,MEDIUM,HIGH \
+            --format template --template "@contrib/junit.tpl" \
+            -o src/junit-report-low-med-high.xml \
+            --ignore-unfixed \
+            'nodeapp:$(tag)'
+              
+            docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $HOME/Library/Caches:/root/.cache/ \
+            -v "$(pwd):/src" \
+            aquasec/trivy \
+            --exit-code 0 \
+            --severity CRITICAL \
+            --format template --template "@contrib/junit.tpl" \
+            -o src/junit-report-crit.xml \
+            --ignore-unfixed \
+            'nodeapp:$(tag)'
+
+      - task: PublishTestResults@2
+        displayName: Publish Test Results
+        inputs:
+          testResultsFormat: "JUnit" # Options: JUnit, NUnit, VSTest, xUnit, cTest
+          testResultsFiles: "**/junit-report-*.xml"
