Azure Pipeline: Added image scanner

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,10 +96,10 @@ stages:
         inputs:
           command: "build"
           Dockerfile: "Dockerfile"
+          repository: "nodeapp"
           tags: |
             latest
             $(commitHash)
-          arguments: "-t nodeapp:$(tag)"
 
       - task: CmdLine@2
         displayName: Scan for reports
