--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -107,27 +107,29 @@ stages:
           script: |
             docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $HOME/Library/Caches:/root/.cache/ \
             -v "$(pwd):/src" \
             aquasec/trivy \
+            image \
             --exit-code 0 \
             --severity LOW,MEDIUM,HIGH \
             --format template --template "@contrib/junit.tpl" \
             -o src/junit-report-low-med-high.xml \
             --ignore-unfixed \
-            'nodeapp:$(tag)'
+            --security-checks vuln \
+            nodeapp:$(commitHash)
               
             docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $HOME/Library/Caches:/root/.cache/ \
             -v "$(pwd):/src" \
             aquasec/trivy \
+            image \
             --exit-code 0 \
             --severity CRITICAL \
             --format template --template "@contrib/junit.tpl" \
             -o src/junit-report-crit.xml \
             --ignore-unfixed \
-            'nodeapp:$(tag)'
+            --security-checks vuln \
+            nodeapp:$(commitHash)
 
       - task: PublishTestResults@2
         displayName: Publish Test Results
