--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2",
+    "ansi-regex": "^6.0.1",
+    "express": "^4.18.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
     "index": "^0.4.0",
-    "mocha": "^9.1.3",
+    "mocha": "^9.2.2",
     "mocha-junit-reporter": "^2.0.2",
-    "supertest": "^6.1.6"
+    "supertest": "^6.2.4"
   }
 }
