--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@ coverage
 
 # nyc test coverage
 .nyc_output
-
+*TEST*
+*report*
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
@@ -40,6 +41,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+coverage/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
