--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,31 @@ stages:
     - task: PublishTestResults@2
       inputs:
         testResultsFormat: 'JUnit'
-        testResultsFiles: '**/TEST-*.xml'
+        testResultsFiles: '**/test*.xml'
+        
+    - task: CmdLine@2
+      displayName: Scan for Vulnerabilities
+      inputs:
+        script: |
+            docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $HOME/Library/Caches:/root/.cache/ \
+            -v "$(pwd):/src" \
+            aquasec/trivy \
+            fs \
+            --exit-code 0 \
+            --severity LOW,MEDIUM,HIGH,CRITICAL \
+            --format template --template "@contrib/junit.tpl" \
+            -o src/junit-report-low-med-high.xml \
+            --ignore-unfixed \
+            --security-checks vuln,secret,config \
+            ./
+
+    - task: PublishTestResults@2
+      displayName: Publish Test Results
+      inputs:
+        testResultsFormat: "JUnit" # Options: JUnit, NUnit, VSTest, xUnit, cTest
+        testResultsFiles: "**/junit-report-*.xml"
 
     - task: DownloadSecureFile@1
       condition: eq(variables['build.sourceBranch'], 'refs/heads/dev')
@@ -107,6 +131,7 @@ stages:
           script: |
             docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $HOME/Library/Caches:/root/.cache/ \
             -v "$(pwd):/src" \
             aquasec/trivy \
             image \
@@ -120,6 +145,7 @@ stages:
               
             docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $HOME/Library/Caches:/root/.cache/ \
             -v "$(pwd):/src" \
             aquasec/trivy \
             image \
